# cmake-example

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
app/: CMakeLists.txt
app/include/: app.hpp
app/src/: main.cpp
lib/crc16/: CMakeLists.txt
lib/crc16/include/: crc16.h
lib/crc16/src/: crc16.c
